force-app/main/default/objects/Class_Participation__c/Class_Participation__c.object-meta.xml
<CustomObject>
    <label>Class Participation</label>
    <nameField>
        <displayFormat>PR-{000000}</displayFormat>
        <label>Program Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Class Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>