force-app/main/default/objects/Class_Participation__c/fields/Section_Completed__c.field-meta.xml
<CustomField>
    <fullName>Section_Completed__c</fullName>
    <label>Section Completed</label>
    <type>TextArea</type>
</CustomField>