force-app/main/default/objects/Class_Participation__c/fields/Service__c.field-meta.xml
<CustomField>
    <fullName>Service__c</fullName>
    <label>Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retreat</fullName>
            </value>
            <value>
                <fullName>Luncheon</fullName>
            </value>
            <value>
                <fullName>Pre-GED</fullName>
            </value>
            <value>
                <fullName>ESL</fullName>
            </value>
            <value>
                <fullName>Employment Workshop</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>